app/gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compat-demo
  labels:
    app: compat-demo
spec:
  selector:
    app: compat-demo
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
