app/gitops/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: compat-demo
  labels:
    app: compat-demo
spec:
  to:
    kind: Service
    name: compat-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
